@@ -41,12 +41,11 @@
 /**
  * \brief Flags for internal uses (change with caution!!!)
  */
+
+// When this flag is OFF, do not force C1 criterion for the classical AMG method
 #define RS_C1            ON  /**< CF splitting of RS: check C1 Criterion */
-// When this flag is OFF, do not force C1 criterion for
-// the classical AMG method
+// When this flag is ON, the matrix rows will be reordered as diagonal entries first
 #define DIAGONAL_PREF    OFF /**< order each row such that diagonal appears first */
-// When this flag is ON, the matrix rows need to be
-// reordered as diagonal entries first
 
 /**
  * \brief FASP integer and floating point numbers
