@@ -1,7 +1,9 @@
 File Name: CHANGES
 
-03/28/2015 FASP 1.7.1:
+04/03/2015 FASP 1.7.1:
 - Fix a bug: Add a lower bound for quality_bound.
+- Fix a bug: Invert small dense matrices with zero diagonal entries.
+- Add Guass elmination with pivoting.
 - Update regression test results.
 
 03/24/2015 FASP 1.7.0:
